syntax = "proto3";
package proto;

option go_package = "/ts";

service Trim {
  rpc TrimSpace (TrimRequest) returns (TrimResponse) {}
}

// Trim方法的请求参数
message TrimRequest {
  string s = 1;
}

// Trim方法的响应
message TrimResponse {
  string s = 1;
}
